# rust-eth

./: .gitignore  Cargo.toml  README.md  Todo.md  blockchain.cbor  validator_blockchain.cbor
lib/: Cargo.toml  tx.cbor
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
node/: Cargo.toml
node/src/: handler.rs  lib.rs  main.rs  util.rs
validator/: Cargo.toml  alice.priv.cbor  alice.pub.pem  bob.priv.cbor  bob.pub.pem
validator/src/: cli.rs  main.rs  proposer.rs
wallet/: Cargo.toml  bob_wallet_config.toml  wallet_config.toml
wallet/src/: core.rs  main.rs
