[package]
name = "poslib"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.9"
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
rand = "0.8.5"
serde = "1.0.228"
sha256 = "1.6.0"
spki = "0.7.3"
thiserror = "2.0.17"
tokio = "1.48.0"
uint = { version = "^0.10.0", features = ["std"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
